# Backend-CPP

sprint1/problems/async_server/solution/src/: main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/final_task/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h  tag_invoke.cpp  tag_invoke.h
sprint1/problems/map_json/solution/src/: http_server.h
sprint1/problems/radio/solution/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
sprint1/problems/radio/solution/src/: audio.h  main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: main_multi?.cpp
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt  conan_provider.cmake
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution_back/: CMakeLists.txt
sprint1/problems/seabattle/solution/: CMakeLists.txt  CMakeUserPresets.json
sprint1/problems/seabattle/solution/src/: main.cpp  seabattle.h
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt  CMakeUserPresets.json
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  CMakeUserPresets.json  tcp_client.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: main.cpp
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: main.cpp
sprint2/problems/join_game/: out1.txt  out2.txt  out3.txt  out4.txt  test.txt
sprint2/problems/join_game/solution/static/: abc..html  file with spaces.html  game.html  load_simulator.html
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: Dockerfile
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  README.md
sprint2/problems/server_logging/solution/src/: api_handler.cpp  api_handler.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  model.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: file_handler.cpp  file_handler.h  http_server.h  main.cpp  request_handler.h
sprint3/problems/: script.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/tests/: model_tests.cpp
sprint3/problems/flamegraph/solution/: run.sh  shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/build_release/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint3/problems/gen_objects/solution/src/app/: application.h  players.cpp  players.h
sprint3/problems/gen_objects/solution/src/json/: tag_invoke.h
sprint3/problems/gen_objects/solution/src/loot_generator/: loot_generator.h
sprint3/problems/gen_objects/solution/src/model/: model.cpp  model.h
sprint3/problems/gen_objects/solution/src/request_handler/: api_handler.cpp  endpoint.h
sprint3/problems/gen_objects/solution/tests/: model_tests.cpp
sprint3/problems/instrumentation/precode/v2/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  events2dot  gmon.out
sprint3/problems/instrumentation/precode/v2/.cmake/api/v1/reply/: cache-v2-eae0b0f0bc161eee7181.json  cmakeFiles-v1-f65b6effc9ad57ffd1a0.json  codemodel-v2-5fbc83d73206d46d00be.json  index-2024-02-16T09-52-44-0923.json  target-events2dot-Debug-1d2d15e09fccba9651cd.json
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/json/: tag_invoke.cpp
sprint3/problems/static_lib/solution/src/loot_generator/: loot_generator.cpp
sprint3/problems/static_lib/solution/src/model/: model.h
sprint3/problems/static_lib/solution/src/request_handler/: file_handler.cpp  request_handler.h
sprint3/problems/static_lib/solution/src/util/: util.h
sprint3/problems/static_lib/solution/tests/: model_tests.cpp
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  main.cpp  run.sh
sprint4/problems/leave_game/solution/: CMakeLists.txt  dogs_data.csv  test.sh
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: main.cpp
sprint4/problems/state_serialization/solution/src/app/: application.cpp  application.h  players.cpp  players.h
sprint4/problems/state_serialization/solution/src/app_serialize/: ser_app.h  ser_players.h
sprint4/problems/state_serialization/solution/src/http_server/: http_server.h
sprint4/problems/state_serialization/solution/src/infrastructure/: serializing_listener.cpp  serializing_listener.h
sprint4/problems/state_serialization/solution/src/json/: tag_invoke.cpp
sprint4/problems/state_serialization/solution/src/loot_generator/: loot_generator.cpp
sprint4/problems/state_serialization/solution/src/model/: collision_detector.cpp  dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  loot.h  map.h  model.h  office.h
sprint4/problems/state_serialization/solution/src/model_serialize/: model_serialize.h  ser_dog.h  ser_game.h  ser_game_session.h  ser_loot.h  ser_player.h
sprint4/problems/state_serialization/solution/src/parse/: parse.h
sprint4/problems/state_serialization/solution/src/request_handler/: api_handler.cpp
sprint4/problems/state_serialization/solution/tests/: state.save  state_serialization_tests.cpp  utils_tests.h
tests_back/: run.sh  test_s04_bookypedia-2.py
(+198 files in other folders)
